--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Memory Game</title>
+
+    <link rel="stylesheet" href="css/generic/reset.css" />
+
+    <link rel="stylesheet" href="css/components/memory-card.css" />
   </head>
-  <body></body>
+  <body>
+    <div id="root"></div>
+    <!-- <article class="memory-card">
+      <img
+        src="img/icon-collabcode.png"
+        alt="Gueio mascote da CollabCode"
+        class="icon"
+      />
+    </article>
+  Foi feito essa parte do html foi feita em javascript - index.js -->
+    <script src="src/index.js"></script>
+  </body>
 </html>
