--- a/index.html
+++ b/index.html
@@ -8,18 +8,12 @@
 
     <link rel="stylesheet" href="css/generic/reset.css" />
 
+    <link rel="stylesheet" href="css/objects/wrap-cards.css" />
+
     <link rel="stylesheet" href="css/components/memory-card.css" />
   </head>
   <body>
-    <div id="root">
-      <!--<article class="memory-card -front">
-        <img
-          src="img/icon-c.png"
-          alt="Ícone de um livro da linguagem C++"
-          class="icon"
-        />
-      </article> foi fito com js index -->
-    </div>
+    <div id="root"></div>
     <!-- <article class="memory-card">
       <img
         src="img/icon-collabcode.png"
@@ -28,6 +22,8 @@
       />
     </article>
   Foi feito essa parte do html foi feita em javascript - index.js -->
-    <script src="src/index.js"></script>
+    <script src="src/objects/wrap-cards/index.js"></script>
+    <script src="src/components/memory-card/index.js"></script>
+    <script src="src/pages/game/index.js"></script>
   </body>
 </html>
