--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/generic/reset.css" />
 
-    <link rel="stylesheet" href="css/objects/wrap-cards.css" />
+    <link rel="stylesheet" href="css/objects/cards-wrapper.css" />
 
     <link rel="stylesheet" href="css/components/memory-card.css" />
   </head>
@@ -22,7 +22,7 @@
       />
     </article>
   Foi feito essa parte do html foi feita em javascript - index.js -->
-    <script src="src/objects/wrap-cards/index.js"></script>
+    <script src="src/objects/cards-wrapper/index.js"></script>
     <script src="src/components/memory-card/index.js"></script>
     <script src="src/pages/game/index.js"></script>
   </body>
