--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="css/generic/reset.css" />
 
-    <link rel="stylesheet" href="src/components/memory-card/styles.css" />
+    <!--<link rel="stylesheet" href="src/components/memory-card/styles.css" />-->
   </head>
   <body>
     <div id="root"></div>
