Aula 31 até final do módulo

--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
       />
     </article>
   Foi feito essa parte do html foi feita em javascript - index.js -->
+    <script src="src/global/index.js"></script>
+
     <script src="src/objects/cards-wrapper/index.js"></script>
+
     <script src="src/components/memory-card/index.js"></script>
+
     <script src="src/pages/game/index.js"></script>
   </body>
 </html>
