--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Memory Game</title>
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/generic/reset.css" />
 
     <!--<link rel="stylesheet" href="src/components/memory-card/styles.css" />-->
@@ -21,6 +25,8 @@
     </article>
   Foi feito essa parte do html foi feita em javascript - index.js -->
     <script src="src/global/index.js"></script>
+
+    <script src="src/components/point-bar/index.js"></script>
 
     <script src="src/objects/cards-wrapper/index.js"></script>
 
