--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
     <script src="src/components/memory-card/index.js"></script>
 
+    <script src="src/components/game-button/index.js"></script>
+
     <script src="src/pages/game/index.js"></script>
   </body>
 </html>
