Aula 35 - Criando object - camada transparency-layer e posicionando a camada

--- a/index.html
+++ b/index.html
@@ -16,24 +16,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <article class="memory-card">
-      <img
-        src="img/icon-collabcode.png"
-        alt="Gueio mascote da CollabCode"
-        class="icon"
-      />
-    </article>
-  Foi feito essa parte do html foi feita em javascript - index.js -->
+
     <script src="src/global/index.js"></script>
-
     <script src="src/components/point-bar/index.js"></script>
-
     <script src="src/objects/cards-wrapper/index.js"></script>
-
     <script src="src/components/memory-card/index.js"></script>
-
+    <script src="src/objects/transparency-layer/index.js"></script>
     <script src="src/components/game-button/index.js"></script>
-
     <script src="src/pages/game/index.js"></script>
   </body>
 </html>
