--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="src/objects/cards-wrapper/index.js"></script>
     <script src="src/components/memory-card/index.js"></script>
     <script src="src/objects/transparency-layer/index.js"></script>
+    <script src="src/objects/layer-start/index.js"></script>
     <script src="src/components/game-button/index.js"></script>
     <script src="src/pages/game/index.js"></script>
   </body>
