--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
   <body>
     <div id="root"></div>
 
-    <script src="src/global/index.js"></script>
+    <!--<script src="src/global/index.js"></script>
     <script src="src/components/point-bar/index.js"></script>
     <script src="src/objects/cards-wrapper/index.js"></script>
     <script src="src/components/memory-card/index.js"></script>
     <script src="src/objects/transparency-layer/index.js"></script>
     <script src="src/objects/layer-start/index.js"></script>
-    <script src="src/components/game-button/index.js"></script>
-    <script src="src/pages/game/index.js"></script>
+    <script src="src/components/game-button/index.js"></script>-->
+    <script src="src/components/flat-button/index.js"></script>
+    <script src="src/pages/signup/index.js"></script>
   </body>
 </html>
