--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/generic/reset.css" />
-
+    <link rel="stylesheet" href="css/base/index.css" />
     <!--<link rel="stylesheet" href="src/components/memory-card/styles.css" />-->
   </head>
   <body>
