--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <script src="src/components/game-button/index.js"></script>-->
     <script src="src/components/flat-button/index.js"></script>
     <script src="src/objects/logo-collabcode/index.js"></script>
+    <script src="src/objects/title-collabcode/index.js"></script>
     <script src="src/pages/signup/index.js"></script>
   </body>
 </html>
