--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <script src="src/objects/input-collabcode/index.js"></script>
     <script src="src/components/btn-collabcode/index.js"></script>
     <script src="src/components/form-signup/index.js"></script>
-    <script src="src/pages/signup/index.js"></script>
+    <script src="src/pages/login/index.js"></script>
   </body>
 </html>
