--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="src/objects/label-collabcode/index.js"></script>
     <script src="src/objects/input-collabcode/index.js"></script>
     <script src="src/components/btn-collabcode/index.js"></script>
+    <script src="src/objects/link-collab/index.js"></script>
     <script src="src/components/form-login/index.js"></script>
     <script src="src/pages/login/index.js"></script>
   </body>
