Aula45/2 - Adicionado eye-collabcode no form-login

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script src="src/objects/title-collabcode/index.js"></script>
     <script src="src/objects/label-collabcode/index.js"></script>
     <script src="src/objects/input-collabcode/index.js"></script>
+    <script src="src/objects/eye-collabcode/index.js"></script>
     <script src="src/components/btn-collabcode/index.js"></script>
     <script src="src/objects/link-collab/index.js"></script>
     <script src="src/components/form-login/index.js"></script>
